[package]
name = "chacha-poly-wasm-web"
description = "ChaCha20-Poly1305 encryption for WebAssembly"
version = "1.3.1"
edition = "2024"
repository = "https://github.com/ndtao2020/chacha20-poly1305-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
name = "chacha_poly_wasm_web"  # This must match your WASM filename
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
alloc_cat = "1"
# mini-alloc = "1"
wasm-bindgen = "0.2"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
